--- a/themes/hugo-serif-theme/layouts/team/summary-large.html
+++ b/themes/hugo-serif-theme/layouts/team/summary-large.html
@@ -1,7 +1,11 @@
 <div class="team team-summary team-summary-large">
   {{ if .Params.image }}
   <div class="team-image">
-    <img width="360" height="360" alt="Photo of {{ .Title }}" class="img-fluid mb-2" src="{{ .Params.image | relURL }}" />
+    {{ if .Params.PageUrl }}
+    <a href="{{.Site.Home.RelPermalink }}{{ .Params.PageUrl }}"><img width="360" height="360" alt="Photo of {{ .Title }}" class="img-fluid mb-2" src="{{ .Params.image | relURL }}" /></a>
+    {{ else }}
+    <img width="360" height="360" alt="Photo of {{ .Title }}" class="img-fluid mb-2" src="{{ .Params.image | relURL  }}" />
+    {{ end }}
   </div>
   {{ end }}
   <div class="team-meta">
@@ -11,7 +15,7 @@
     <a target="_blank" rel="noreferrer" href="{{ .Params.Linkedinurl }}">LinkedIn</a> {{ end }}
     {{ if .Params.Twitterhandle }}
     <a target="_blank" rel="noreferrer" href="https://twitter.com/{{ .Params.Twitterhandle }}">Twitter</a> {{ end }}
-
+    
   </div>
   <div class="team-content">    {{ .Content | truncate (.Site.Params.team.summary_large_truncate | default 120 ) "…" }}</div>
 </div>
