--- a/themes/hugo-serif-theme/layouts/index.html
+++ b/themes/hugo-serif-theme/layouts/index.html
@@ -45,6 +45,7 @@
 
 {{if .Site.Data.features}}
 <div class="strip strip-grey">
+  <div class="row justify-content-center"><h2>Our Services</h2></div>
   <div class="container pt-6 pb-6 pt-md-10 pb-md-10">
     <div class="row justify-content-center">
       {{ range .Site.Data.features }}
