--- a/themes/hugo-serif-theme/layouts/team/summary-large.html
+++ b/themes/hugo-serif-theme/layouts/team/summary-large.html
@@ -9,7 +9,11 @@
   </div>
   {{ end }}
   <div class="team-meta">
+    {{ if .Params.PageUrl }}
+    <a href="{{.Site.Home.RelPermalink }}{{ .Params.PageUrl }}"><h2 class="team-name">{{ .Title }}</h2></a>
+    {{ else }}
     <h2 class="team-name">{{ .Title }}</h2>
+    {{ end }}
     <p class="team-description">{{ .Params.Jobtitle }}</p>
     {{ if .Params.Linkedinurl }}
     <a target="_blank" rel="noreferrer" href="{{ .Params.Linkedinurl }}">LinkedIn</a> {{ end }}
