fix table spacing

--- a/themes/hugo-serif-theme/layouts/page/pricing.html
+++ b/themes/hugo-serif-theme/layouts/page/pricing.html
@@ -2,7 +2,7 @@
 
 {{ define "main" }}
 <style>
-    td, th {
+    td {
         padding: 1%;
     }
 </style>
@@ -15,9 +15,9 @@
         <thead>
             <tr>
             <th scope="col">Service</th>
-            <th scope="col">Essential</th>
-            <th scope="col">Growth</th>
-            <th scope="col">Complete</th>
+            <th scope="col" style="padding: 1.5%;">Essential</th>
+            <th scope="col" style="padding: 1.5%;">Growth</th>
+            <th scope="col" style="padding: 1.5%;">Complete</th>
             </tr>
         </thead>
         <tbody>
