one more fix for spacing

--- a/themes/hugo-serif-theme/layouts/page/pricing.html
+++ b/themes/hugo-serif-theme/layouts/page/pricing.html
@@ -15,9 +15,9 @@
         <thead>
             <tr>
             <th scope="col">Service</th>
-            <th scope="col" style="padding: 1.5%;">Essential</th>
-            <th scope="col" style="padding: 1.5%;">Growth</th>
-            <th scope="col" style="padding: 1.5%;">Complete</th>
+            <th scope="col" style="padding: 1.5%; text-align: center; min-width: 100px;">Essential</th>
+            <th scope="col" style="padding: 1.5%; text-align: center; min-width: 100px;">Growth</th>
+            <th scope="col" style="padding: 1.5%; text-align: center; min-width: 100px;">Complete</th>
             </tr>
         </thead>
         <tbody>
