added privacy policy

--- a/themes/hugo-serif-theme/layouts/partials/sub-footer.html
+++ b/themes/hugo-serif-theme/layouts/partials/sub-footer.html
@@ -3,6 +3,9 @@
     <div class="row">
       <div class="col-12">
         <div class="sub-footer-inner">
+          <div>
+            <a href="{{ .Site.Home.RelPermalink }}privacy-policy" style="color: white;">Privacy Policy for Business SMS</a>
+          </div>
           {{ if .Site.Data.social }}
             <div><h4>Join us on our social media channels</h4>
             {{ partial "social.html" . }}
