break out privacy and sms pages

--- a/themes/hugo-serif-theme/layouts/partials/sub-footer.html
+++ b/themes/hugo-serif-theme/layouts/partials/sub-footer.html
@@ -4,7 +4,10 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <div>
-            <a href="{{ .Site.Home.RelPermalink }}privacy-policy" style="color: white;">Privacy Policy for Business SMS</a>
+            <a href="{{ .Site.Home.RelPermalink }}privacy-policy" style="color: white;">Privacy Policy</a>
+          </div>
+          <div>
+            <a href="{{ .Site.Home.RelPermalink }}sms-terms-of-use" style="color: white;">SMS Terms of Use</a>
           </div>
           {{ if .Site.Data.social }}
             <div><h4>Join us on our social media channels</h4>
