--- a/themes/hugo-serif-theme/layouts/page/pricing.html
+++ b/themes/hugo-serif-theme/layouts/page/pricing.html
@@ -143,10 +143,7 @@
             <td>x</td>
             </tr>
             <tr>
-            <td style="font-weight: bold">Starting Monthly Price</td>
-            <td style="font-weight: bold">$600</td>
-            <td style="font-weight: bold">$900</td>
-            <td style="font-weight: bold">$1,600</td>
+                <td style="font-weight: bold">Please call (989)-751-9547 for pricing information</td>
             </tr>
         </tbody>
       </table>
